--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Who am i?</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Athiti:wght@600&family=M+PLUS+1+Code&display=swap" rel="stylesheet">
@@ -22,11 +22,11 @@
             <div data-aos="fade-up" data-aos-duration="1000" class="animasyon">
                 <hr class="mt-5">
                 <h5 class="mt-5 text-center">Connect With Me:</h5>
-                <ul class="mt-5 d-flex"> 
-                <li><a href="https://www.instagram.com/isaenes.uslu/?hl=tr" target="_blank"><i class="fa-brands fa-instagram fa-2xl" style="color: #ced2d9;"></i></a></li>
-                <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fisaenesuslu" target="_blank"><i class="fa-brands fa-twitter fa-2xl" style="color: #ced2d9;"></i></a></li>
-                <li><a href="https://github.com/isaenesuslu" target="_blank"><i class="fa-brands fa-github fa-2xl" style="color: #ced2d9;"></i></a></li>
-                <li><a href="mailto:isaenesuslu@outlook.com" target="_blank"><i class="fa-regular fa-envelope fa-2xl" style="color: #ced2d9;"></i></a></li>
+                <ul class="mt-5 d-flex justify-content-around"> 
+                <li><a href="https://www.instagram.com/isaenes.uslu/?hl=tr" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
+                <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fisaenesuslu" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a></li>
+                <li><a href="https://github.com/isaenesuslu" target="_blank"><i class="fa-brands fa-github fa-2xl"></i></a></li>
+                <li><a href="mailto:isaenesuslu@outlook.com" target="_blank"><i class="fa-regular fa-envelope fa-2xl"></i></a></li>
             </ul>
             <hr class="mt-5">
             <figure>
@@ -41,11 +41,11 @@
         </div>
     </div>
 
-    <section>
+    <div class="section">
         <div class="animasyon-2" data-aos="flip-left" data-aos-easing="ease-out-cubic"  data-aos-duration="2000">
             <article class="d-flex">
               <div class="about-me">
-                <h1 class="text-center">Who am i?</h1>
+                <h2 class="text-center">Who am i?</h2>
                 <p class="text-center">Greetings to all developers and everybody! I am <strong>Isa Enes Uslu</strong> from Turkey. <br> To briefly talk about myself; I continue to learn Linux, I love country music, I am interested in sports, I love to read early in the morning and I keep looking for things to improve myself.</p>  
                 <h5 class="mt-5">So what programming languages ​​or tools do I know and am trying to learn?</h5>
                 <ul class="d-flex justify-content-around mt-5">
@@ -55,13 +55,13 @@
                     <li><i class="fa-brands fa-react fa-2xl" style="color: #ced2d9;"></i> React</li>
                     <li><i class="fa-brands fa-sass fa-2xl" style="color: #ced2d9;"></i> Sass</li>
                     <li><i class="fa-brands fa-python fa-2xl" style="color: #ced2d9;"></i> Python</li>                       
-                    <li><i class="fa-brands fa-linux fa-2xl" style="color: #ced2d9;"></i> Linux <3</li>
+                    <li><i class="fa-brands fa-linux fa-2xl" style="color: #ced2d9;"></i> Linux &lt;3  </li>
                 </ul>
                 <p class="text-center">And more...</p>
             </div>
             </article>
         </div>
-    </section>
+    </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script>
